# daterecognition

./: LICENSE  README.md  pyproject.toml
.github/workflows/: actions.yml
daterecognition/: formats.py  parser.py
tests/: test_daterecognition.py
