[tool.poetry]
name = "daterecognition"
version = "0.1.1"
description = "DateRecognition is a Pure-Python library for extracting dates from strings."
authors = ["Samit Shah <samitshah1@gmail.com>"]
license = "MIT"
repository = "https://github.com/samitshah1/daterecognition"
keywords = ["date extraction","python"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
